syntax = "proto3";

package proto;

option go_package = "github.com/somen440/saga/proto";

enum OrderStatus {
  ORDER_UNKNOWN = 0;
  ORDER_CREATED = 1;
  ORDER_APPROVED = 2;
  ORDER_CREATE_REJECTED = 3;
}

message OrderEntity {
  int64 id = 1;
  int64 item_id = 2;
  int64 consumer_id = 3;
  OrderStatus status = 4;
}

service Order {
  rpc GetOrder(GetOrderRequest) returns (GetOrderReply) {}
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderReply) {}
  rpc ApproveOrder(ApproveOrderRequest) returns (ApproveOrderReply) {}
  rpc RejectOrder(RejectOrderRequest) returns (RejectOrderReply) {}
}

message GetOrderRequest {
  int64 order_id = 1;
}

message GetOrderReply {
  OrderEntity order = 1;
}

message CreateOrderRequest {
  int64 consumer_id = 1;
  int64 item_id = 2;
}

message CreateOrderReply {
  OrderEntity order = 1;
}

message ApproveOrderRequest {
  int64 order_id = 1;
}

message ApproveOrderReply {}

message RejectOrderRequest {
  int64 order_id = 1;
}

message RejectOrderReply {}
